--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=backend
+# MySQL ?????? ?? ??
+spring.datasource.url=jdbc:mysql://localhost:3307/onion-db
+spring.datasource.username=onion-user
+spring.datasource.password=onion1!
+
+# JPA ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#Hibernate ??
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
