--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// JPA 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//스웨거
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
 
 	// MySQL 드라이버 추가 (필요한 데이터베이스 드라이버로 변경 가능)
 	implementation 'mysql:mysql-connector-java:8.0.33'
