--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #Hibernate ??
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#??? ??
+springdoc.swagger-ui.path=/swagger-ui.html
