--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,6 +31,11 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 	//시큐리티
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// JWT 의존성 추가
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리 (Jackson)
+
 
 
 
