--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.application.name=backend
-# MySQL ?????? ?? ??
-spring.datasource.url=jdbc:mysql://localhost:3307/onion-db
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3307/onion-db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
 spring.datasource.username=onion-user
 spring.datasource.password=onion1!
 
-# JPA ??
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-#Hibernate ??
+#Hibernate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#??? ??
+#swagger
 springdoc.swagger-ui.path=/swagger-ui.html
 
 #jwt
