--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리 (Jackson)
 	//aop
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	//elasticsearch
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 
 
 
