--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,6 +46,17 @@ services:
     ports:
       - "5601:5601"
 
+  redis:
+    image: redis:7
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    command: [ "redis-server", "--save", "60", "1", "--loglevel", "warning" ]
+
+
+
 #  logstash:
 #    image: docker.elastic.co/logstash/logstash:8.5.0
 #    container_name: logstash
@@ -62,4 +73,6 @@ services:
 volumes:
   db_data:
   es-data:
+    driver: local
+  redis-data:
     driver: local
