--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,6 +46,14 @@ services:
     ports:
       - "5601:5601"
 
+  mongo:
+    image: mongo:7
+    container_name: mongodb
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
   redis:
     image: redis:7
     container_name: redis
@@ -75,4 +83,6 @@ volumes:
   es-data:
     driver: local
   redis-data:
+    driver: local
+  mongo-data:
     driver: local
