--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,4 +26,11 @@ spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 
+# redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=onion1!
+
+
+
 logging.level.org.springframework.web=DEBUG
