광고 클릭 집계 기능 개발- mongoDB,redis

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	// Redis 7
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	//mongoDB
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
 
 
