--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -31,6 +31,9 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=onion1!
 
-
+#mongoDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mongo-db
 
 logging.level.org.springframework.web=DEBUG
