--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	//mongoDB
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	// Spring Batch 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-batch'
 
 
 
