--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -65,18 +65,18 @@ services:
 
 
 
-#  logstash:
-#    image: docker.elastic.co/logstash/logstash:8.5.0
-#    container_name: logstash
-#    environment:
-#      - xpack.monitoring.enabled=false
-#      - LOGSTASH_JAVA_OPTS=-Xms512m -Xmx512m
-#    volumes:
-#      - ./logstash/pipeline:/usr/share/logstash/pipeline
-#      - ./logstash/mysql-connector-j-9.0.0.jar:/usr/share/logstash/mysql-connector-j-9.0.0.jar
-#    ports:
-#      - "5044:5044"
-#      - "9600:9600"  # Logstash monitoring API
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.5.0
+    container_name: logstash
+    environment:
+      - xpack.monitoring.enabled=false
+      - LOGSTASH_JAVA_OPTS=-Xms512m -Xmx512m
+    volumes:
+      - ./logstash/pipeline:/usr/share/logstash/pipeline
+      - ./logstash/mysql-connector-java-8.0.26.jar:/usr/share/logstash/mysql-connector-java-8.0.26.jar # JDBC 드라이버 매핑
+    ports:
+      - "5044:5044"
+      - "9600:9600"  # Logstash monitoring API
 
 volumes:
   db_data:
