--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// JPA 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'javax.persistence:javax.persistence-api:2.2'
+
 	// MySQL 드라이버 추가
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	//스웨거
