--- a/docker/logstash/pipeline/logstash.conf
+++ b/docker/logstash/pipeline/logstash.conf
@@ -5,7 +5,7 @@ input {
     jdbc_connection_string => "jdbc:mysql://mysql-db:3306/onion-db?useSSL=false"
     jdbc_user => "onion-user"
     jdbc_password => "onion1!"
-    schedule => "* * * * *" # 매 분마다 데이터 동기화
+    schedule => "0 * * * *" # 한시간마다 데이터 동기화
     statement => "SELECT * FROM ad_view_stat" # 동기화할 MySQL 쿼리
   }
 }
