--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// JPA 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'javax.persistence:javax.persistence-api:2.2'
+	//implementation 'javax.persistence:javax.persistence-api:2.2'
 
 	// MySQL 드라이버 추가
 	implementation 'mysql:mysql-connector-java:8.0.33'
@@ -51,6 +51,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	// Spring Batch 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
+	//json
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+
 
 
 
