--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 	//json
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	//rabbitmq
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
 
 
 
