--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -36,4 +36,11 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mongo-db
 
+#rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=onion-user
+spring.rabbitmq.password=onion1!
+
+
 logging.level.org.springframework.web=DEBUG
