--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,7 +54,8 @@ dependencies {
 	//json
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-	//rabbitmq
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+ 	//rabbitmq
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
 
