이번주 인기글  기능 개발(rabbitMQ)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -42,5 +42,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=onion-user
 spring.rabbitmq.password=onion1!
 
+#batch
+spring.batch.jdbc.initialize-schema=always
 
 logging.level.org.springframework.web=DEBUG
