--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+server.port=8081
+
 spring.application.name=backend
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/onion-db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3307/onion-db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
 #spring.datasource.url=jdbc:mysql://localhost:13306/onion-db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
 spring.datasource.username=onion-user
 spring.datasource.password=onion1!
